--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -24,4 +24,4 @@ proc-macro-error = "1.0.4"
 [dev-dependencies]
 knuffel = { path=".." }
 # miette = { version="6.0.1", features=["fancy"] }
-miette = { path="/home/tll/Documents/Coding/Languages/Rust/miette", features=["fancy"] }
+miette = { git = "https://github.com/TheLostLambda/miette", features=["fancy"] }
