--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -15,10 +15,10 @@ readme = "README.md"
 proc_macro = true
 
 [dependencies]
-heck = {version="0.4.1", features=["unicode"]}
-syn = {version="1.0.81", features=["full", "extra-traits"]}
-quote = "1.0.10"
-proc-macro2 = "1.0.32"
+heck = "0.5.0"
+syn = {version="1", features=["full", "extra-traits"]}
+quote = "1.0.36"
+proc-macro2 = "1.0.81"
 proc-macro-error = "1.0.4"
 
 [dev-dependencies]
